assignment 1 cs complete

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" >
   <head>
     <meta charset="utf-8">
     <title>Introduction to CSS Lab</title>
-    <!-- Your code here! -->
-  </head>
+    <link rel="stylesheet" href="./style.css" />
+  </head> 
 
   <body>
 
@@ -15,7 +15,7 @@
       <ul>
         <li class='perspective-questions'>Should the layout of the text be in a single or double column?</li>
         <li class='perspective-questions'>Should we use a different font color for the header?</li>
-        <li class='perspective-questions'>How should the same content appear
+        <li class='perspective-questions'>How should the same content appear</li>
           differently on a desktop versus a mobile device?</li>
       </ul>
 
